# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyVenus"
version = "1.0.0"
description = "A python interface to the Venus environment, used to program Hamilton liquid handlers"
readme = "README.md"
authors = [{ name = "Benjamin Wohl", email = "bw@sniprbiome.com" }]
license = { file = "COPYING.LESSER" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hamilton", "liquid handler", "laboratory automation", "venus"]
dependencies = [
    "pandas",
    "jinja2",
    "pyodbc"
]
requires-python = ">=3.9"

[project.optional-dependencies]
example = ["openpyxl"]

[project.urls]
homepage = "https://github.com/sniprbiome/pyVenus"
documentation = "https://sniprbiome.github.io/pyVenus/"

[tool.bumpver]
current_version = "1.1.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"pyVenus/__init__.py" = [
    "{version}",
    "{pep440_version}",
]

