[metadata]
name = PyVenus
description = A python interface to the Venus environment, used to program Hamilton liquid handlers
long_description_content_type = text/markdown
url = https://github.com/sniprbiome/pyvenus
project_urls =
    Bug Tracker = https://github.com/sniprbiome/pyvenus/issues
    Changelog = https://github.com/sniprbiome/pyvenus/releases/
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    jinja2
    pyodbc

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyvenus-setup-example-method = PyVenus.scripts:setup_example_method
    pyvenus-init = PyVenus.scripts:init