[metadata]
name = pyvenus
description = A Python interface to the Venus environment, used to program Hamilton liquid handlers
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/sniprbiome/pyvenus
project_urls =
    Bug Tracker = https://github.com/sniprbiome/pyvenus/issues
    Changelog = https://github.com/sniprbiome/pyvenus/releases/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data=True
install_requires =
    pandas
    jinja2
    pyodbc
    openpyxl

[options.package_data]
* = *.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyvenus = pyvenus.scripts:pyvenus_main
    pyvenus-setup = pyvenus.scripts:pyvenus_setup